--- a/reachme.html
+++ b/reachme.html
@@ -51,7 +51,7 @@
         <a class="i2" href="https://www.instagram.com/rusiru__j/"><i class="uil uil-instagram"></i></a>
         <a class="i3" href="https://github.com/rusirujayawardhana"><i class="uil uil-github-alt"></i></a>
         <a class="i4" href="https://www.behance.net/rusirujayawar"><i class="uil uil-behance"></i></a>
-        <a class="i5" href="mailto:dasithrusiru1@example.com"><i class="uil uil-google"></i></a>
+        <a class="i5" href="mailto:dasithrusiru1@gmail.com"><i class="uil uil-google"></i></a>
         <a class="i6" href="tel:+94770497345"><i class="uil uil-phone-volume"></i></a>
     </div>
 
