--- a/reachme.html
+++ b/reachme.html
@@ -52,7 +52,7 @@
         <a class="i3" href="https://github.com/rusirujayawardhana"><i class="uil uil-github-alt"></i></a>
         <a class="i4" href="https://www.behance.net/rusirujayawar"><i class="uil uil-behance"></i></a>
         <a class="i5" href="mailto:dasithrusiru1@gmail.com"><i class="uil uil-google"></i></a>
-        <a class="i6" href="tel:+94770497345"><i class="uil uil-phone-volume"></i></a>
+        <a class="i6" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"><i class="uil uil-linkedin-alt"></i></a>
     </div>
 
     <div class="menu">
