--- a/whoiam.html
+++ b/whoiam.html
@@ -64,7 +64,7 @@
             I am a web developer, UX/UI designer, and front-end developer. 
             I'm passionate about creative endeavors on the internet, 
             and I enjoy creating things based on what I see or hear. 
-            I'm always curious to learn more about new technologies, creative coding, and design.
+            I'm always curious to learn more about new technologies, creative coding, and design . . .<i class="uil uil-pen"></i>
         </div>
         <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download">curriculum vitae</i></a></div>   
     </div>
