--- a/project.html
+++ b/project.html
@@ -55,6 +55,7 @@
             <img src="img/OP.svg">
             <img src="img/stoic-logo.svg">
             <img src="img/carnage.webp">
+            <img src="img/fp.svg">
           </div>
 
         <div class="visual-slider-text-container-lp">
@@ -88,6 +89,12 @@
                 <h3>Carnage</h3>
                 <p class="visual-slider-description-lp"><a href="https://surge-dev-rusiru.myshopify.com/">shopify | ps : tohmaw <i class="uil uil-link"></i></a></p>
             </div>
+            
+            <div class="visual-slider-text-area-lp pro7">
+                <h3>Fitnsess Playground</h3>
+                <p class="visual-slider-description-lp"><a href="https://rusiruass.webflow.io/">webflow <i class="uil uil-link"></i></a></p>
+            </div>
+            
         </div>
     </div>
 
