--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="wrapper">
         <div class="animate__animated animate__pulse">
-            <h2 >I am <span class="auto-input"></span></h2> 
+            <h2 >I am a <span class="auto-input"></span></h2> 
             <img class="h1-title"src="img/DRH.svg">
             
         </div>
