--- a/whoiam.html
+++ b/whoiam.html
@@ -51,7 +51,7 @@
               <path id="textPath" d="M 85,0 A 85,85 0 0 1 -85,0 A 85,85 0 0 1 85,0" transform="translate(100,100)" fill="none" stroke-width="0"></path>
               <g font-size="13.1px">
                 <text text-anchor="start">
-                  <textPath class="coloring" xlink:href="#textPath" startOffset="0%">Rusiru Jay - UI/UX Designer - Web Developer - Frontend Developer -'👻'-</textPath>
+                  <textPath class="coloring" xlink:href="#textPath" startOffset="0%">- UI/UX Designer - Web Developer - Frontend Wizard</textPath>
                 </text>
               </g>
             </svg>
