--- a/whoiam.html
+++ b/whoiam.html
@@ -64,13 +64,11 @@
     </div>
 
     <div class="who-container">
-        <div>Hey, I'm Dasith Rusiru, and I use the nickname Rusiru J on social media. 
-            I am a web developer, UX/UI designer, and front-end developer. 
-            I'm passionate about creative endeavors on the internet, 
-            and I enjoy creating things based on what I see or hear. 
-            I'm always curious to learn more about new technologies, creative coding, and design . . .<i class="uil uil-pen"></i>
+        <div>
+            Hey there!<br> I'm Dasith Rusiru, also known as Rusiru J in the digital world.
+            I'm a tech-savvy person who mastering web development, UX/UI design, and front-end coding...<i class="uil uil-pen"></i>
         </div>
-        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download">curriculum vitae</i></a></div>   
+        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download"> Curriculum Vitae</i></a></div>   
     </div>
 
     
