--- a/whoiam.html
+++ b/whoiam.html
@@ -68,7 +68,7 @@
             Hey there!<br> I'm Dasith Rusiru, also known as Rusiru J in the digital world.
             I'm a tech-savvy person who mastering web development, UX/UI design, and front-end coding...<i class="uil uil-pen"></i>
         </div>
-        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download"> CV</i></a></div>   
+        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download"> Curriculum Vitae</i></a></div>   
     </div>
     
     <div class="menu">
