--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
+
 </head>
 <body class="animate__animated animate__fadeIn">
     <svg class="menu-svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
         <defs>
         </defs>
-        <path fill="#232323" class="out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
-        <path fill="#000" class="in-top" d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"/>
-        <path fill="#232323" class="out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
-        <path fill="#000" class="in-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
+        <path fill="#232323" class="out-top project-out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
+        <path fill="#000" class="in-top project-top" d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"/>
+        <path fill="#232323" class="out-bottom project-out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
+        <path fill="#000" class="in-bottom project-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
     </svg>
     <canvas>
     </canvas>
@@ -49,11 +53,39 @@
 
     <div class="wrapper">
         <div class="animate__animated animate__pulse">
-            <h2 >I am <span class="auto-input"></span></h2> 
-            <img class="h1-title"src="img/DRH.svg">
+            <span class="home_title">Awesome<br><span class="overlay-text">#DigitalCreater</span><br>Who Live In <br>Ceylon 🇱🇰</span>
+            <img style="display: none;" class="h1-title"src="img/DRH.svg">
+            <h2 ><span class="auto-input"></span></h2>
         </div>
-        
     </div>
+
+    <div class="rm-wrapper">
+    <div class="reachme-container home body-content__rollig-text rolling-texts" >
+        <a class="i1 rolling-text__text" href="https://www.facebook.com/rusiru.jayawardana.3"><i class="uil uil-facebook-f"></i></a>
+        <a class="i2 rolling-text__text" href="https://www.instagram.com/rusiru__j/"><i class="uil uil-instagram"></i></a>
+        <a class="i7 rolling-text__text" href="https://www.tiktok.com/@rusiru__j"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
+        <a class="i8 rolling-text__text" href="https://www.youtube.com/@rusirujay"><i class="uil uil-youtube"></i></a>
+        <a class="i6 rolling-text__text" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"><i class="uil uil-linkedin-alt"></i></a>
+        <a class="i3 rolling-text__text" href="https://github.com/rusirujayawardhana"><i class="uil uil-github-alt"></i></a>
+        <a class="i4 rolling-text__text" href="https://www.behance.net/rusirujayawar"><i class="uil uil-behance"></i></a>
+        <a class="i5 rolling-text__text" href="mailto:dasithrusiru1@gmail.com"><i class="uil uil-google"></i></a>
+        <a class="i9 rolling-text__text" href="tel:+94770497345"><i class="uil uil-whatsapp"></i></a>
+    </div>
+</div>
+
+<div class="rm-wrapper-mob">
+    <div class="reachme-container home body-content__rollig-text rolling-text" >
+        <a class="i1 rolling-text__text" href="https://www.facebook.com/rusiru.jayawardana.3"><i class="uil uil-facebook-f"></i></a>
+        <a class="i2 rolling-text__text" href="https://www.instagram.com/rusiru__j/"><i class="uil uil-instagram"></i></a>
+        <a class="i7 rolling-text__text" href="https://www.tiktok.com/@rusiru__j"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
+        <a class="i8 rolling-text__text" href="https://www.youtube.com/@rusirujay"><i class="uil uil-youtube"></i></a>
+        <a class="i6 rolling-text__text" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"><i class="uil uil-linkedin-alt"></i></a>
+        <a class="i3 rolling-text__text" href="https://github.com/rusirujayawardhana"><i class="uil uil-github-alt"></i></a>
+        <a class="i4 rolling-text__text" href="https://www.behance.net/rusirujayawar"><i class="uil uil-behance"></i></a>
+        <a class="i5 rolling-text__text" href="mailto:dasithrusiru1@gmail.com"><i class="uil uil-google"></i></a>
+        <a class="i9 rolling-text__text" href="tel:+94770497345"><i class="uil uil-whatsapp"></i></a>
+    </div>
+</div>
 
     <div class="menu">
         <svg class="menu-svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
@@ -84,6 +116,19 @@
     <script src="script.js"></script>
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script>
+        let $text = $('.rolling-text .rolling-text__text');
+        let $wrap = $('.rolling-text');
+
+        $text.clone().appendTo($wrap);
+
+        TweenMax.to($wrap, 60, {
+        x: -($text.width()),
+        ease: Linear.easeNone,
+        repeat: -1
+        });    
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed(".auto-input",{
@@ -93,5 +138,6 @@
             loop: true,
         });
     </script>
+   
 </body>
 </html>
