--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="wrapper">
         <div class="animate__animated animate__pulse">
-            <span class="home_title">Awesome<br><span class="overlay-text">#DigitalCreater</span><br>Who Live In <br>Ceylon 🇱🇰</span>
+            <span class="home_title">Awesome<br><span class="overlay-text">#DigitalCreator</span><br>Who Live In <br>Ceylon 🇱🇰</span>
             <img style="display: none;" class="h1-title"src="img/DRH.svg">
             <h2 ><span class="auto-input"></span></h2>
         </div>
