--- a/whoiam.html
+++ b/whoiam.html
@@ -68,7 +68,7 @@
             Hey there!<br> I'm Dasith Rusiru, also known as Rusiru J in the digital world.
             I'm a tech-savvy person who mastering web development, UX/UI design, and front-end coding...<i class="uil uil-pen"></i>
         </div>
-        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download"> Curriculum Vitae</i></a></div>   
+        <div class="cv"><a href="img/rusiru cv.pdf" download><i class="uil uil-cloud-download text"> Curriculum Vitae</i></a></div>   
     </div>
     
     <div class="menu">
@@ -97,5 +97,6 @@
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="encoder.js"></script>
 </body>
 </html>
