--- a/reachme.html
+++ b/reachme.html
@@ -63,9 +63,9 @@
         <svg class="menu-svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
             <defs>
             </defs>
-            <path fill="#000" class="out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
+            <path fill="#000" class="out-top project-out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
             <path fill="#0d0d0d" class="in-top" d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"/>
-            <path fill="#000" class="out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
+            <path fill="#000" class="out-bottom project-out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
             <path fill="#0d0d0d" class="in-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
         </svg>
         
@@ -78,6 +78,14 @@
                 <div class="menu-list animate__animated animate__fadeInUp "><span class="menu-span">04.  </span><span>04.  </span class="menu-span"><a href="reachme.html">Reach Me</a></div>
             </div>
         </div>
+
+        <div class="name-card animate__animated animate__zoomInUp">
+            <img src="img/DRPC.png">
+            <div>
+                <p><a class="surgeglobal" href="https://surge.global/" target="_blank">Surge Global</a> | <a class="sliit-ise" href="https://www.sliit.lk/computing/programmes/information-systems-engineering-degree/" target="_blank">SLIIT</a></p>
+                <a href="whoiam.html" style="display: flex;justify-content: center;"><p class="auto-input-name"></p></a>
+            </div>
+        </div>
     </div>   
     
    
@@ -86,5 +94,6 @@
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="name.js"></script>
 </body>
 </html>
