--- a/whoiam.html
+++ b/whoiam.html
@@ -93,8 +93,8 @@
 
         <div class="name-card animate__animated animate__zoomInUp">
             <img src="img/DRPC.png">
-            <div>
-                <p><a class="surgeglobal" href="https://surge.global/" target="_blank">Surge Global</a> | <a class="sliit-ise" href="https://www.sliit.lk/computing/programmes/information-systems-engineering-degree/" target="_blank">SLIIT</a></p>
+           <div>
+                <p><a class="surgeglobal" href="https://surge.global/" target="_blank">Surge👨‍💻</a> | <a class="sliit-ise" href="https://www.sliit.lk/computing/programmes/information-systems-engineering-degree/" target="_blank">SLIIT🎓</a></p>
                 <a href="whoiam.html" style="display: flex;justify-content: center;"><p class="auto-input-name"></p></a>
             </div>
         </div>
