--- a/reachme.html
+++ b/reachme.html
@@ -21,6 +21,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <div id="circle"></div>
 <body class="animate__animated animate__fadeIn">
@@ -47,7 +51,7 @@
               </label>
     </div>
 
-    <div class="reachme-container">
+    <div class="reachme-container rm">
         <a class="i1" href="https://www.facebook.com/rusiru.jayawardana.3"><i class="uil uil-facebook-f"></i></a>
         <a class="i2" href="https://www.instagram.com/rusiru__j/"><i class="uil uil-instagram"></i></a>
         <a class="i7" href="https://www.tiktok.com/@rusiru__j"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
@@ -75,7 +79,7 @@
                 <div class="menu-list animate__animated animate__fadeInDown "><span class="menu-span">01.  </span><span class="menu-span">01.  </span><a href="index.html">Welcome</a></div>
                 <div class="menu-list animate__animated animate__fadeInLeft "><span class="menu-span">02.  </span><span>02.  </span class="menu-span"><a href="project.html">Projects</a></div>
                 <div class="menu-list animate__animated animate__fadeInRight "><span class="menu-span">03.  </span><span>03.  </span class="menu-span"><a href="whoiam.html">Who I Am</a></div>
-                <div class="menu-list animate__animated animate__fadeInUp "><span class="menu-span">04.  </span><span>04.  </span class="menu-span"><a href="reachme.html">Reach Me</a></div>
+                <div class="menu-list animate__animated animate__fadeInUp active-menu"><span class="menu-span">04.  </span><span>04.  </span class="menu-span"><a href="reachme.html">Reach Me</a></div>
             </div>
         </div>
 
