--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body class="animate__animated animate__fadeIn">
     <svg class="menu-svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
@@ -99,7 +103,7 @@
 
         <div class="menu-wrapper">
             <div class="menu-list-wrapper">
-                <div class="menu-list animate__animated animate__fadeInDown "><span class="menu-span">01.  </span><span class="menu-span">01.  </span><a href="index.html">Welcome</a></div>
+                <div class="menu-list animate__animated animate__fadeInDown active-menu"><span class="menu-span">01.  </span><span class="menu-span">01.  </span><a href="index.html">Welcome</a></div>
                 <div class="menu-list animate__animated animate__fadeInLeft "><span class="menu-span">02.  </span><span>02.  </span class="menu-span"><a href="project.html">Projects</a></div>
                 <div class="menu-list animate__animated animate__fadeInRight "><span class="menu-span">03.  </span><span>03.  </span class="menu-span"><a href="whoiam.html">Who I Am</a></div>
                 <div class="menu-list animate__animated animate__fadeInUp "><span class="menu-span">04.  </span><span>04.  </span class="menu-span"><a href="reachme.html">Reach Me</a></div>
