--- a/reachme.html
+++ b/reachme.html
@@ -52,15 +52,15 @@
     </div>
 
     <div class="reachme-container rm">
-        <a class="i1" href="https://www.facebook.com/rusiru.jayawardana.3"><i class="uil uil-facebook-f"></i></a>
-        <a class="i2" href="https://www.instagram.com/rusiru__j/"><i class="uil uil-instagram"></i></a>
-        <a class="i7" href="https://www.tiktok.com/@rusiru__j"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
-        <a class="i8" href="https://www.youtube.com/@rusirujay"><i class="uil uil-youtube"></i></a>
-        <a class="i6" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"><i class="uil uil-linkedin-alt"></i></a>
-        <a class="i3" href="https://github.com/rusirujayawardhana"><i class="uil uil-github-alt"></i></a>
-        <a class="i4" href="https://www.behance.net/rusirujayawar"><i class="uil uil-behance"></i></a>
-        <a class="i5" href="mailto:dasithrusiru1@gmail.com"><i class="uil uil-google"></i></a>
-        <a class="i9" href="tel:+94770497345"><i class="uil uil-whatsapp"></i></a>
+        <a class="i1" href="https://www.facebook.com/rusiru.jayawardana.3" target="_blank"><i class="uil uil-facebook-f"></i></a>
+        <a class="i2" href="https://www.instagram.com/rusiru__j/" target="_blank"><i class="uil uil-instagram"></i></a>
+        <a class="i7" href="https://www.tiktok.com/@rusiru__j" target="_blank"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
+        <a class="i8" href="https://www.youtube.com/@rusirujay" target="_blank"><i class="uil uil-youtube"></i></a>
+        <a class="i6" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+        <a class="i3" href="https://github.com/rusirujayawardhana" target="_blank"><i class="uil uil-github-alt"></i></a>
+        <a class="i4" href="https://www.behance.net/rusirujayawar" target="_blank"><i class="uil uil-behance"></i></a>
+        <a class="i5" href="mailto:dasithrusiru1@gmail.com" target="_blank"><i class="uil uil-google"></i></a>
+        <a class="i9" href="tel:+94770497345" target="_blank"><i class="uil uil-whatsapp"></i></a>
     </div>
 
     <div class="menu">
