--- a/project.html
+++ b/project.html
@@ -58,12 +58,19 @@
 
         <div class="visual-slider-img-lp">
             <img src="img/DR.svg">
+            <img src="img/SN.svg">
         </div>
 
         <div class="visual-slider-text-container-lp">
             <div class="visual-slider-text-area-lp pro1">
+                <a href="index.html">
                 <h3>Dev Rusiru</h3>
-                <p class="visual-slider-description-lp"><a href="index.html"></a>html / css / jquery <i class="uil uil-link"></i></i></p>
+                <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
+            </div>
+            <div class="visual-slider-text-area-lp pro2">
+                <a href="new stupp/index.html">
+                <h3>SN</h3>
+                <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
             </div>
         </div>
     </div>
