--- a/project.html
+++ b/project.html
@@ -63,12 +63,12 @@
 
         <div class="visual-slider-text-container-lp">
             <div class="visual-slider-text-area-lp pro1">
-                <a href="index.html">
+                <a href="index.html" target="_blank">
                 <h3>Dev Rusiru</h3>
                 <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
             </div>
             <div class="visual-slider-text-area-lp pro2">
-                <a href="new stupp/index.html">
+                <a href="new stupp/index.html" target="_blank">
                 <h3>SN</h3>
                 <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
             </div>
