--- a/project.html
+++ b/project.html
@@ -68,7 +68,7 @@
                 <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
             </div>
             <div class="visual-slider-text-area-lp pro2">
-                <a href="new stupp/index.html" target="_blank">
+                <a href="sn/index.html" target="_blank">
                 <h3>SN</h3>
                 <p class="visual-slider-description-lp">html / css / jquery <i class="uil uil-link"></i></i></p></a>
             </div>
