--- a/sn/index.html
+++ b/sn/index.html
@@ -66,22 +66,22 @@
               </svg>
             </div>
             <div class="nav-title-wrappe">
-              <a href="#edu-body"
+              <a href="#menu"
                 ><p class="nav-title en" data-cursor="pointer2">
                   EDU. & EXP.
                 </p></a
               >
-              <a href="#contact-body"
+              <a href="#menu"
                 ><p class="nav-title co" data-cursor="pointer2">CONTACT</p></a
               >
-              <a href="#about-body"
+              <a href="#menu"
                 ><p class="nav-title a" data-cursor="pointer2">ABOUT</p></a
               >
             </div>
           </div>
         </div>
 
-        <div class="menu-container">
+        <div id="menu" class="menu-container">
           <div id="about-body" class="about-body">
             <h1>About SN</h1>
             <p>
