--- a/sn/index.html
+++ b/sn/index.html
@@ -49,7 +49,7 @@
         <div class="wave -three"></div>
       </div>
       <div class="master-wrapper">
-        <div class="home-body">
+        <div id="menu" class="home-body">
           <div class="hp-text-container">
             <div class="logo">
               <svg stroke="#000" stroke-width="2" class="text-line">
@@ -81,7 +81,7 @@
           </div>
         </div>
 
-        <div id="menu" class="menu-container">
+        <div class="menu-container">
           <div id="about-body" class="about-body">
             <h1>About SN</h1>
             <p>
@@ -399,5 +399,5 @@
   <script src="curser.js"></script>
   <script src="script.js"></script>
   <script src="fullscreen.js"></script>
-  <script src="preloader,js"></script>
+  <script src="preloader.js"></script>
 </html>
