--- a/sn/index.html
+++ b/sn/index.html
@@ -66,15 +66,15 @@
               </svg>
             </div>
             <div class="nav-title-wrappe">
-              <a href="#menu"
+              <a href="#edu-body"
                 ><p class="nav-title en" data-cursor="pointer2">
                   EDU. & EXP.
                 </p></a
               >
-              <a href="#menu"
+              <a href="#contact-body"
                 ><p class="nav-title co" data-cursor="pointer2">CONTACT</p></a
               >
-              <a href="#menu"
+              <a href="#about-body"
                 ><p class="nav-title a" data-cursor="pointer2">ABOUT</p></a
               >
             </div>
