--- a/sn/index.html
+++ b/sn/index.html
@@ -66,17 +66,11 @@
               </svg>
             </div>
             <div class="nav-title-wrappe">
-              <a href="#edu-body"
-                ><p class="nav-title en" data-cursor="pointer2">
+              <p class="nav-title en" data-cursor="pointer2">
                   EDU. & EXP.
-                </p></a
-              >
-              <a href="#contact-body"
-                ><p class="nav-title co" data-cursor="pointer2">CONTACT</p></a
-              >
-              <a href="#about-body"
-                ><p class="nav-title a" data-cursor="pointer2">ABOUT</p></a
-              >
+                </p>
+              <p class="nav-title co" data-cursor="pointer2">CONTACT</p>
+              <p class="nav-title a" data-cursor="pointer2">ABOUT</p>
             </div>
           </div>
         </div>
