--- a/reachme.html
+++ b/reachme.html
@@ -53,7 +53,7 @@
 
     <div class="reachme-container rm">
         <a class="i1" href="https://www.facebook.com/rusiru.jayawardana.3" target="_blank"><i class="uil uil-facebook-f"></i></a>
-        <a class="i2" href="https://www.instagram.com/rusiru__j/" target="_blank"><i class="uil uil-instagram"></i></a>
+        <a class="i2" href="https://www.instagram.com/rusirujay/" target="_blank"><i class="uil uil-instagram"></i></a>
         <a class="i7" href="https://www.tiktok.com/@rusiru__j" target="_blank"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
         <a class="i8" href="https://www.youtube.com/@rusirujay" target="_blank"><i class="uil uil-youtube"></i></a>
         <a class="i6" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
