--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="rm-wrapper">
     <div class="reachme-container home body-content__rollig-text rolling-texts" >
         <a class="i1 rolling-text__text" href="https://www.facebook.com/rusiru.jayawardana.3" target="_blank"><i class="uil uil-facebook-f"></i></a>
-        <a class="i2 rolling-text__text" href="https://www.instagram.com/rusiru__j/" target="_blank"><i class="uil uil-instagram"></i></a>
+        <a class="i2 rolling-text__text" href="https://www.instagram.com/rusirujay/" target="_blank"><i class="uil uil-instagram"></i></a>
         <a class="i7 rolling-text__text" href="https://www.tiktok.com/@rusiru__j" target="_blank"><i><img class="tiktok-icon" src="img/tik-tok.png"></i></a>
         <a class="i8 rolling-text__text" href="https://www.youtube.com/@rusirujay" target="_blank"><i class="uil uil-youtube"></i></a>
         <a class="i6 rolling-text__text" href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
