--- a/sn/index.html
+++ b/sn/index.html
@@ -60,7 +60,7 @@
                     text-anchor="middle"
                     y="50%"
                   >
-                    SN
+                    DR
                   </text>
                 </a>
               </svg>
@@ -176,7 +176,7 @@
               </p>
               <p>
                 <a
-                  href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"
+                  href="https://www.instagram.com/rusirujay/"
                   target="_blank"
                   data-cursor="pointer2"
                   ><i class="uil uil-instagram"></i>instagram</a
