--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
             <p class="">
               I’M RUSIRU J <span class="auto-input"></span> <br />
-              CO-FOUNDER of ######## - FROM <span class="lk">ශ්‍රී ලංකා!</span>
+              FROM <span class="lk">ශ්‍රී ලංකා!</span>
             </p>
             <p>
               I always focus on the visual side of things. No matter what I’m
