--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
     <link rel="icon" type="image/x-icon" href="dr/img/favicon.png" />
-    <meta name="description" content="Dasith Rusiru, a web developer specializing in stunning website design.">
-    <meta property="og:description" content="Dasith Rusiru, a web developer specializing in stunning website design.">
+    <meta name="description" content="Dasith Rusiru, a web developer specializing in stunning website design and developing.">
+    <meta property="og:description" content="Dasith Rusiru, a web developer specializing in stunning website design and developing.">
     <meta property="og:title" content="Dasith Rusiru">
-    <meta name="twitter:description" content="Dasith Rusiru, a web developer specializing in stunning website design.">
+    <meta name="twitter:description" content="Dasith Rusiru, a web developer specializing in stunning website design and developing.">
     <meta name="twitter:title" content="Dasith Rusiru">
 
     <meta property="og:image" content="https://devrusiru.github.io/dev-rusiru.jpg#keepProtocol">
