--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               hours and hours into perfecting small details like animations,
               responsiveness, and color matching etc... This dedication has
               greatly enhanced my web development skills, both frontend and
-              backend. Currently, I am working as a web developer for  <a href="https://surge.global/" target="_blank"><b>Surge
+              backend. Currently, I am working as a web developer for  <a href="https://surge.global/" target="_blank" data-cursor="pointer2"><b>Surge
               Global</b></a> and also as a freelancer. I've also worked on many UI
               design projects...
             </p>
