--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dasith Rusiru</title>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="stylesheet" href="stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,6 +36,7 @@
   <body>
     <div id="preloader">
       <div class="loader-wrapper">
+        <dotlottie-player src="https://lottie.host/b0a18bbf-de03-4f4d-86be-7574c3c7e192/xyoFS3FYkB.json" style="height: 50dvh;" background="transparent" speed="1" loop autoplay></dotlottie-player>
         <div class="loader">
           <span>l</span>
           <span>o</span>
