--- a/index.html
+++ b/index.html
@@ -135,10 +135,74 @@
                   </a>
                 </div>
               </div>
+              <div class="timeline-block timeline-block-left">
+                <div class="marker"></div>
+                <div class="timeline-content">
+                  <a
+                    href="https://www.sliit.lk/computing/programmes/information-systems-engineering-degree/"
+                    target="_blank"
+                  >
+                    <h3 data-cursor="pointer2">BSc (Hons) ISE</h3>
+                    <span>SLIIT 2018 - 2022</span>
+                    <p>
+                      Information systems engineering specialty programme is the
+                      key to develop and manage complex systems that solve
+                      real-world problems. The students get to enhance their
+                      knowledge on areas namely, Project management, Software
+                      quality assurance, Data management so on so forth.
+                    </p>
+                  </a>
+                </div>
+              </div>
+              <div class="timeline-block timeline-block-right">
+                <div class="marker"></div>
+                <div class="timeline-content">
+                  <a
+                    href="https://www.sliit.lk/computing/programmes/information-systems-engineering-degree/"
+                    target="_blank"
+                  >
+                    <h3 data-cursor="pointer2">BSc (Hons) ISE</h3>
+                    <span>SLIIT 2018 - 2022</span>
+                    <p>
+                      Information systems engineering specialty programme is the
+                      key to develop and manage complex systems that solve
+                      real-world problems. The students get to enhance their
+                      knowledge on areas namely, Project management, Software
+                      quality assurance, Data management so on so forth.
+                    </p>
+                  </a>
+                </div>
+              </div>
 
             </div>
 
             <div class="container exp">
+              <div class="timeline-block timeline-block-right">
+                <div class="marker"></div>
+                <div class="timeline-content">
+                  <a href="https://surge.global/" target="_blank">
+                    <h3 data-cursor="pointer2">Web Developer</h3>
+                    <span>Surge 2022 - present</span>
+                    <p>
+                      Design, test, and deliver websites and landing pages that
+                      convert visitors to customers.
+                    </p>
+                  </a>
+                </div>
+              </div>
+              <div class="timeline-block timeline-block-left">
+                <div class="marker"></div>
+                <div class="timeline-content">
+                  <a href="https://surge.global/" target="_blank">
+                    <h3 data-cursor="pointer2">Web Developer</h3>
+                    <span>Surge 2022 - present</span>
+                    <p>
+                      Design, test, and deliver websites and landing pages that
+                      convert visitors to customers.
+                    </p>
+                  </a>
+                </div>
+              </div>
               <div class="timeline-block timeline-block-right">
                 <div class="marker"></div>
                 <div class="timeline-content">
