--- a/index.html
+++ b/index.html
@@ -296,7 +296,10 @@
             <h1># Hi there</h1>
 
             <p class="">
-              I’M RUSIRU J <span class="auto-input"></span> <br />
+              I’M RUSIRU J 
+              <br />
+              <span class="auto-input"></span> 
+              <br />
               FROM <span class="lk">ශ්‍රී ලංකා!</span>
             </p>
             <p>
