--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     <meta property="og:url" content="https://devrusiru.github.io/">
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="content-language" content="en">
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1CK4DZ7N7F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-1CK4DZ7N7F');
+    </script>
   </head>
   <body>
     <div id="preloader">
