--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     
       gtag('config', 'G-1CK4DZ7N7F');
     </script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3356127083640729"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="preloader">
