--- a/index.html
+++ b/index.html
@@ -246,6 +246,20 @@
             <div class="project-container">
               <div class="project-item pro1">
                 <a
+                  href="https://japdivisionmotorsports.com.au/"
+                  target="_blank"
+                  data-cursor="pointer2"
+                >
+                  <img src="editoz-club.jpg" alt="" />
+                  <p class="project-link">Jap Division Motor Sports 🔗</p></a
+                >
+                <p class="project-task">- Landing Page</p>
+                <p class="project-technology">
+                  technologies : WORDPRESS / HTML / CSS / JQUERY
+                </p>
+              </div>
+              <div class="project-item pro1">
+                <a
                   href="https://sign-up.editozclub.com/"
                   target="_blank"
                   data-cursor="pointer2"
