--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="editoz-club.jpg" alt="" />
+                  <img src="Jap-Division-Motorsports.jpg" alt="" />
                   <p class="project-link">Jap Division Motor Sports 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
