--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                 <div class="marker"></div>
                 <div class="timeline-content">
                   <a href="https://surge.global/" target="_blank">
-                    <h3 data-cursor="pointer2">Web Developer</h3>
-                    <span>Surge 2022 - present</span>
+                    <h3 data-cursor="pointer2">Web Production Officer</h3>
+                    <span>HSBC 2024/09 - present</span>
                     <p>
                       Design, test, and deliver websites and landing pages that
                       convert visitors to customers.
@@ -205,7 +205,7 @@
                 <div class="timeline-content">
                   <a href="https://surge.global/" target="_blank">
                     <h3 data-cursor="pointer2">Web Developer</h3>
-                    <span>Surge 2022 - present</span>
+                    <span>Surge 2022/01 - 2024/09 </span>
                     <p>
                       Design, test, and deliver websites and landing pages that
                       convert visitors to customers.
