--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="timeline-block timeline-block-right">
                 <div class="marker"></div>
                 <div class="timeline-content">
-                  <a href="https://surge.global/" target="_blank">
+                  <a href="https://www.hsbc.com/" target="_blank">
                     <h3 data-cursor="pointer2">Web Production Officer</h3>
                     <span>HSBC 2024/09 - present</span>
                     <p>
