--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dasith Rusiru</title>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="f-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -72,6 +73,109 @@
         <div class="wave -two"></div>
         <div class="wave -three"></div>
       </div>
+
+      <div id="page-wrap">
+        <div id="canvas"></div>
+
+        <div class="curtain" data-vs-id="mouse-distortion-vs" data-fs-id="mouse-distortion-fs">
+            <canvas id="mouse-coords-canvas" data-sampler="canvasTexture"></canvas>
+            <img src="imgs/4.jpg" data-sampler="distortedTexture" crossorigin="anonymous" />
+        </div>
+    </div>
+
+    <script id="mouse-distortion-vs" type="x-shader/x-vertex">
+      #ifdef GL_ES
+      precision mediump float;
+      #endif
+
+      // default mandatory variables
+      attribute vec3 aVertexPosition;
+      attribute vec2 aTextureCoord;
+
+      uniform mat4 uMVMatrix;
+      uniform mat4 uPMatrix;
+    
+uniform mat4 distortedTextureMatrix;
+
+      // custom variables
+      varying vec3 vVertexPosition;
+      varying vec2 vTextureCoord;
+varying vec2 vDistortedTextureCoord;
+
+      varying vec2 vDistortionEffect;
+
+
+      uniform vec2 uMousePosition;
+
+      void main() {
+
+          vec3 vertexPosition = aVertexPosition;
+
+             gl_Position = uPMatrix * uMVMatrix * vec4(vertexPosition, 1.0);
+
+             // varyings
+             vTextureCoord = aTextureCoord;
+    vDistortedTextureCoord = (distortedTextureMatrix * vec4(aTextureCoord, 0.0, 1.0)).xy;
+             vVertexPosition = vertexPosition;
+
+          // distortion effect is calculated in the vertex shader
+          vDistortionEffect = uMousePosition - vec2(vertexPosition.x, vertexPosition.y);
+      }
+  </script>
+
+  <script id="mouse-distortion-fs" type="x-shader/x-fragment">
+
+      #ifdef GL_ES
+      precision mediump float;
+      #endif
+
+      varying vec3 vVertexPosition;
+      varying vec2 vTextureCoord;
+varying vec2 vDistortedTextureCoord;
+
+      varying vec2 vDistortionEffect;
+
+      uniform sampler2D canvasTexture;
+      uniform sampler2D distortedTexture;
+
+      uniform vec2 uMousePosition;
+      uniform vec2 uResolution;
+
+      void main( void ) {
+          // get our texture coords
+          vec2 textureCoords = vec2(vTextureCoord.x, vTextureCoord.y);
+
+          // we gonna use the RGB value of our canvas to calculate the distortion effect
+          vec4 distortionMap = texture2D(canvasTexture, textureCoords);
+
+          // ZOOM IN
+          // if we add the distortion to the texture coords it will create a zoom in distortion effect
+          vec2 distortedTextureCoords = vDistortedTextureCoord + distortionMap.r * vDistortionEffect / 3.0;
+
+          // ZOOM OUT
+          // if we substract the distortion to the texture coords it will create a zoom out distortion effect
+          //vec2 distortedTextureCoords = vDistortedTextureCoord - distortionMap.r * vDistortionEffect / 3.0;
+
+          // we are going to add a little chromatic aberration
+          vec4 redDistortion = texture2D(distortedTexture, distortedTextureCoords + distortionMap.r / (uResolution.x / 15.0));
+          vec4 greenDistortion = texture2D(distortedTexture, distortedTextureCoords);
+          vec4 blueDistortion = texture2D(distortedTexture, distortedTextureCoords - distortionMap.r / (uResolution.x / 15.0));
+
+          // first line is the final result without chromatic aberration, second line is what is drawn on the canvas texture if you want to have a look
+          //vec4 finalColor = texture2D(distortedTexture, distortedTextureCoords);
+          //vec4 finalColor = texture2D(canvasTexture, textureCoords);
+
+          vec4 finalColor = vec4(redDistortion.r, greenDistortion.g, blueDistortion.b, 1.0);
+
+          gl_FragColor = finalColor;
+      }
+</script>
+
+
+
+
+
+
       <div class="master-wrapper">
         <div id="menu" class="home-body">
           <div class="hp-text-container">
@@ -380,4 +484,6 @@
   <script src="script.js"></script>
   <script src="fullscreen.js"></script>
   <script src="preloader.js"></script>
+  <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
+<script src="f-script.js"></script>
 </html>
