--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@ varying vec2 vDistortedTextureCoord;
                 ><i class="uil uil-phone-volume"></i
               ></a>
             </div>
-            <h2 class="forever-dev"># My Life as a Developer</h1>
-            <div class="gif-section">
+            <h2 class="forever-dev"># Let’s connect! You can reach out to me on the platforms above Or just drop me an email at <a href="mailto:dasithrusiru1@gmail.com" data-cursor="pointer2">dasithrusiru1@gmail.com</a></h1>
+            <!-- <div class="gif-section">
               <img src="gif/ai-bot.gif" alt="" />
 
               <img src="gif/web-webdevelopper.gif" alt="" /><img
@@ -445,7 +445,7 @@ varying vec2 vDistortedTextureCoord;
                 alt=""
               /><img src="gif/core-keeper-core.gif" alt="" />
               <img src="gif/wanna-code-code.gif" alt="" />
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
