--- a/index.html
+++ b/index.html
@@ -278,7 +278,21 @@ varying vec2 vDistortedTextureCoord;
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro1">
+              <div class="project-item pro2">
+                <a
+                  href="https://hec.com.au/"
+                  target="_blank"
+                  data-cursor="pointer2"
+                >
+                  <img src="hec.com.au.png" alt="" />
+                  <p class="project-link">Robert Herjavec 🔗</p></a
+                >
+                <p class="project-task">- portfolio ebsite</p>
+                <p class="project-technology">
+                  technologies : WORDPRESS / HTML / CSS / JQUERY
+                </p>
+              </div>
+              <div class="project-item pro3">
                 <a
                   href="https://sign-up.editozclub.com/"
                   target="_blank"
@@ -292,7 +306,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HUBSPOT / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro2">
+              <div class="project-item pro4">
                 <a
                   href="https://www.cocomon.com.au/products/cocomon"
                   target="_blank"
@@ -310,7 +324,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : SHOPIFY / LIQUID / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro3">
+              <div class="project-item pro5">
                 <a href="dr/index.html" target="_blank" data-cursor="pointer2">
                   <img src="dev-rusiru.jpg" alt="dev-rusiru" />
                   <p class="project-link">Dev Rusiru Portfolio 🔗</p></a
@@ -320,7 +334,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro4">
+              <div class="project-item pro6">
                 <a
                   href="rusirujay/index.html"
                   target="_blank"
