--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ varying vec2 vDistortedTextureCoord;
                   <img src="hec.com.au.png" alt="" />
                   <p class="project-link">Robert Herjavec 🔗</p></a
                 >
-                <p class="project-task">- portfolio ebsite</p>
+                <p class="project-task">- portfolio website</p>
                 <p class="project-technology">
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
