--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="curtain" data-vs-id="mouse-distortion-vs" data-fs-id="mouse-distortion-fs">
             <canvas id="mouse-coords-canvas" data-sampler="canvasTexture"></canvas>
-            <img src="imgs/2.jpg" data-sampler="distortedTexture" crossorigin="anonymous" />
+            <!-- <img src="imgs/2.jpg" data-sampler="distortedTexture" crossorigin="anonymous" /> -->
         </div>
     </div>
 
@@ -266,11 +266,25 @@ varying vec2 vDistortedTextureCoord;
             <div class="project-container">
               <div class="project-item pro1">
                 <a
+                  href="https://www.thelazyceo.com/"
+                  target="_blank"
+                  data-cursor="pointer2"
+                >
+                  <img src="imgs/thelazyceo.jpg" alt="" />
+                  <p class="project-link">The Lazy CEO 🔗</p></a
+                >
+                <p class="project-task">- LEARNING MANAGEMENT SYSTEM</p>
+                <p class="project-technology">
+                  technologies : KAJABI / HTML / CSS / JQUERY
+                </p>
+              </div>
+              <div class="project-item pro2">
+                <a
                   href="https://japdivisionmotorsports.com.au/"
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="Jap-Division-Motorsports.jpg" alt="" />
+                  <img src="imgs/Jap-Division-Motorsports.jpg" alt="" />
                   <p class="project-link">Jap Division MotorSports 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
@@ -278,13 +292,13 @@ varying vec2 vDistortedTextureCoord;
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro2">
+              <div class="project-item pro3">
                 <a
                   href="https://hec.com.au/"
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="hec.com.au.png" alt="" />
+                  <img src="imgs/hec.com.au.jpg" alt="" />
                   <p class="project-link">Robert Herjavec 🔗</p></a
                 >
                 <p class="project-task">- portfolio website</p>
@@ -292,13 +306,13 @@ varying vec2 vDistortedTextureCoord;
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro3">
+              <div class="project-item pro4">
                 <a
                   href="https://sign-up.editozclub.com/"
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="editoz-club.jpg" alt="" />
+                  <img src="imgs/editoz-club.jpg" alt="" />
                   <p class="project-link">Editoz Club 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
@@ -306,13 +320,13 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HUBSPOT / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro4">
+              <div class="project-item pro5">
                 <a
                   href="https://www.cocomon.com.au/products/cocomon"
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="cocomon.jpg" alt="" />
+                  <img src="imgs/cocomon.jpg" alt="" />
                   <p class="project-link">Cocomon Single Product Page 🔗</p></a
                 >
                 <p class="project-task">
@@ -324,9 +338,9 @@ varying vec2 vDistortedTextureCoord;
                   technologies : SHOPIFY / LIQUID / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro5">
+              <div class="project-item pro6">
                 <a href="dr/index.html" target="_blank" data-cursor="pointer2">
-                  <img src="dev-rusiru.jpg" alt="dev-rusiru" />
+                  <img src="imgs/dev-rusiru.jpg" alt="dev-rusiru" />
                   <p class="project-link">Dev Rusiru Portfolio 🔗</p></a
                 >
                 <p class="project-task">#2<sup>nd</sup> Portfolio</p>
@@ -334,13 +348,13 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro6">
+              <div class="project-item pro7">
                 <a
                   href="rusirujay/index.html"
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="rusiru-jay.png" alt="dev-rusiru" />
+                  <img src="imgs/rusiru-jay.png" alt="dev-rusiru" />
                   <p class="project-link">Rusiru J Portfolio 🔗</p></a
                 >
                 <p class="project-task">#1<sup>st</sup> Portfolio</p>
@@ -498,6 +512,6 @@ varying vec2 vDistortedTextureCoord;
   <script src="script.js"></script>
   <script src="fullscreen.js"></script>
   <script src="preloader.js"></script>
-  <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
-<script src="f-script.js"></script>
+  <!-- <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
+<script src="f-script.js"></script> -->
 </html>
