--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ varying vec2 vDistortedTextureCoord;
               </div>
               <div class="project-item pro4">
                 <a
-                  href="https://sign-up.editozclub.com/"
+                  href="https://editozclub.com/"
                   target="_blank"
                   data-cursor="pointer2"
                 >
