--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
     <title>Dasith Rusiru</title>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-    <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="stylesheet" href="f-style.css">
+    <link rel="stylesheet" href="/css/stylesheet.css" />
+    <link rel="stylesheet" href="/css/f-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -266,6 +266,20 @@ varying vec2 vDistortedTextureCoord;
             <div class="project-container">
               <div class="project-item pro1">
                 <a
+                  href="https://accelerate-editoz.com/"
+                  target="_blank"
+                  data-cursor="pointer2"
+                >
+                  <img src="imgs/accelrate.jpg" alt="" />
+                  <p class="project-link">Accelerate 🔗</p></a
+                >
+                <p class="project-task">- Landing Page</p>
+                <p class="project-technology">
+                  technologies : GoHighLevel(GHL) / HTML / CSS / JQUERY
+                </p>
+              </div>
+              <div class="project-item pro2">
+                <a
                   href="https://www.thelazyceo.com/"
                   target="_blank"
                   data-cursor="pointer2"
@@ -278,7 +292,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : KAJABI / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro2">
+              <div class="project-item pro3">
                 <a
                   href="https://japdivisionmotorsports.com.au/"
                   target="_blank"
@@ -292,7 +306,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro3">
+              <div class="project-item pro4">
                 <a
                   href="https://hec.com.au/"
                   target="_blank"
@@ -306,7 +320,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : WORDPRESS / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro4">
+              <div class="project-item pro5">
                 <a
                   href="https://editozclub.com/"
                   target="_blank"
@@ -320,7 +334,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HUBSPOT / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro5">
+              <div class="project-item pro6">
                 <a
                   href="https://www.cocomon.com.au/products/cocomon"
                   target="_blank"
@@ -338,7 +352,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : SHOPIFY / LIQUID / HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro6">
+              <div class="project-item pro7">
                 <a href="dr/index.html" target="_blank" data-cursor="pointer2">
                   <img src="imgs/dev-rusiru.jpg" alt="dev-rusiru" />
                   <p class="project-link">Dev Rusiru Portfolio 🔗</p></a
@@ -348,7 +362,7 @@ varying vec2 vDistortedTextureCoord;
                   technologies : HTML / CSS / JQUERY
                 </p>
               </div>
-              <div class="project-item pro7">
+              <div class="project-item pro8">
                 <a
                   href="rusirujay/index.html"
                   target="_blank"
@@ -508,10 +522,10 @@ varying vec2 vDistortedTextureCoord;
   </body>
   <script src="dr/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="curser.js"></script>
-  <script src="script.js"></script>
-  <script src="fullscreen.js"></script>
-  <script src="preloader.js"></script>
+  <script src="/scirpt/curser.js"></script>
+  <script src="/scirpt/script.js"></script>
+  <script src="/scirpt/fullscreen.js"></script>
+  <script src="/scirpt/preloader.js"></script>
   <!-- <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
-<script src="f-script.js"></script> -->
+<script src="/scirpt/f-script.js"></script> -->
 </html>
