--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@ varying vec2 vDistortedTextureCoord;
                 href="https://www.linkedin.com/in/rusiru-jayawardhana-9056041b3/"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="LinkedIn Profile"
                 ><i class="uil uil-linkedin-alt"></i
               ></a>
 
@@ -429,6 +430,7 @@ varying vec2 vDistortedTextureCoord;
                 href="https://www.instagram.com/rusirujay/"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="instagram Profile"
                 ><i class="uil uil-instagram"></i
               ></a>
 
@@ -436,6 +438,7 @@ varying vec2 vDistortedTextureCoord;
                 href="https://www.facebook.com/rusiru.jayawardana.3"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="facebook Profile"
               >
                 <i class="uil uil-facebook-f"></i
               ></a>
@@ -443,27 +446,31 @@ varying vec2 vDistortedTextureCoord;
                 href="https://www.tiktok.com/@rusiru__j"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="tiktok Profile"
                 ><i> <img class="tiktok-icon" src="dr/img/tik-tok.png" alt="tiktok"/></i
               ></a>
               <a
                 href="https://www.youtube.com/@rusirujay"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="youtube Profile"
                 ><i class="uil uil-youtube"></i
               ></a>
               <a
                 href="https://github.com/rusirujayawardhana"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="github Profile"
                 ><i class="uil uil-github-alt"></i
               ></a>
               <a
                 href="https://www.behance.net/rusirujayawar"
                 target="_blank"
                 data-cursor="pointer2"
+                aria-label="behance Profile"
                 ><i class="uil uil-behance"></i
               ></a>
-              <a href="tel:+94770497345" target="_blank" data-cursor="pointer2"
+              <a href="tel:+94770497345" target="_blank" data-cursor="pointer2" aria-label="phone call"
                 ><i class="uil uil-phone-volume"></i
               ></a>
             </div>
