--- a/index.html
+++ b/index.html
@@ -278,6 +278,20 @@ varying vec2 vDistortedTextureCoord;
                   technologies : GoHighLevel(GHL) / HTML / CSS / JQUERY
                 </p>
               </div>
+              <div class="project-item pro9">
+                <a
+                  href="https://threadlab.com.au/"
+                  target="_blank"
+                  data-cursor="pointer2"
+                >
+                  <img src="imgs/threadlab.png" alt="accelrate" />
+                  <p class="project-link">Threadlab 🔗</p></a
+                >
+                <p class="project-task">- Landing Page</p>
+                <p class="project-technology">
+                  technologies : GoHighLevel(GHL) / HTML / CSS / JQUERY
+                </p>
+              </div>
               <div class="project-item pro2">
                 <a
                   href="https://www.thelazyceo.com/"
