Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -410,8 +410,7 @@ varying vec2 vDistortedTextureCoord;
               hours and hours into perfecting small details like animations,
               responsiveness, and color matching etc... This dedication has
               greatly enhanced my web development skills, both frontend and
-              backend. Currently, I am working as a web developer for  <a href="https://www.hsbc.com/" target="_blank" data-cursor="pointer2"><b>HSBC</b></a> and also as a freelancer. I've also worked on many UI
-              design projects...
+              backend. Currently, I am working as a web developer for  <a href="https://editozclub.com/" target="_blank" data-cursor="pointer2"><b>Editoz Club</b></a> and also as a freelancer. 
             </p>
             <p>
               <b>Some random facts about me:</b>
@@ -551,3 +550,4 @@ varying vec2 vDistortedTextureCoord;
   <!-- <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
 <script src="/scirpt/f-script.js"></script> -->
 </html>
+
