Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@ varying vec2 vDistortedTextureCoord;
                 <div class="marker"></div>
                 <div class="timeline-content">
                   <a href="https://www.hsbc.com/" target="_blank">
-                    <h3 data-cursor="pointer2">Web Production Officer</h3>
-                    <span>HSBC 2024/09 - present</span>
+                    <h3 data-cursor="pointer2">Web Developer</h3>
+                    <span>Editoz Club 2024/09 - present</span>
                     <p>
                       Design, test, and deliver websites and landing pages that
                       convert visitors to customers.
@@ -550,4 +550,5 @@ varying vec2 vDistortedTextureCoord;
   <!-- <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
 <script src="/scirpt/f-script.js"></script> -->
 </html>
+
 
