--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     </div>
                     <div class="nav-title-wrappe">
                         <p class="nav-title en" data-cursor="pointer2">EDU. & EXP.&nbsp;</p>
-                        <p class="nav-title co" data-cursor="pointer2">Projects&nbsp;</p>
-                        <p class="nav-title a" data-cursor="pointer2">ABOUT&nbsp;</p>
+                        <p class="nav-title co" data-cursor="pointer2">Best Projects&nbsp;</p>
+                        <p class="nav-title a" data-cursor="pointer2">Let's connect&nbsp;</p>
                     </div>
                 </div>
             </div>
